--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
 spring.datasource.password=pogchamp6712
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
